# lingzu-bookarm-py

./: .gitignore  README.md  README_en.md  README_zh.md  el_a3_debugger.spec  pyproject.toml  rodmotor_README.md  setup.py
MotorStudio/: __init__.py  main.py  main_window.py
MotorStudio/backend/: arm_worker.py  calibration_worker.py  data_buffer.py  rodmotor_worker.py  trajectory_recorder.py
MotorStudio/utils/: book_spine_sift.py  can_utils.py  i18n.py  joint_drag_controls.py  style.py  tcp_offset_store.py  theme_manager.py  urdf_loader.py
MotorStudio/widgets/: calibration_panel.py  diagnostics_panel.py  gamepad_panel.py  gripper_panel.py  joint_control_panel.py  monitoring_panel.py  monitoring_window.py  realsense_point_panel.py  rodmotor_panel.py  tcp_panel.py  teaching_panel.py  toolbar_panel.py  trajectory_panel.py  viewer_3d.py
demo/: cartesian_control_demo.py  control_loop_demo.py  dynamics_demo.py  motion_control.py  read_joints.py  slcan_test.py  trajectory_demo.py  waypoint_loop_real.py  waypoints_config.py  xbox_control.py  zero_torque_mode.py
docs/: SDK_API_Protocol.md  SDK核心模块说明.md  电机通信协议汇总.md
el_a3_sdk/: __init__.py  arm_manager.py  can_driver.py  controller_profiles.py  data_types.py  interface.py  joystick.py  kinematics.py  protocol.py  rodmotor.py  serial_utils.py  slcan_can_driver.py  trajectory.py  utils.py
el_a3_sdk/drivers/: __init__.py  base.py  slcan.py  socketcan.py  (+1 more)
scripts/: detect_controller.py  setup_can.sh  setup_multi_can.sh
static_recognition_tool/: README.md  capture_static_recognition.py  static_recognition_gui.py
(+38 files in other folders)
